--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="link float-right">
         <h4>Developed by
-            <a href="https://vk.com/a_malikova" target="_blank">Aygul Malikova</a>
+            <a href="<%= info.developer%>" target="_blank">Aygul Malikova</a>
         </h4>
     </div>
 </footer>
