--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -13,9 +13,9 @@
         </div>
     <%}%>
 
-    <% //if (authorized) {%>
-    <!--<div class="logout float-right">-->
-    <!--<a href="/logout"><img src="/public/images/logout2.svg" alt=""></a>-->
-    <!--</div>-->
-    <%//}%>
+    <% if (authorized) {%>
+    <div class="logout float-right">
+    <a href="/logout"><img src="/public/images/logout2.svg" alt=""></a>
+    </div>
+    <%}%>
 </header>
