--- a/public/stylesheets/nav.scss
+++ b/public/stylesheets/nav.scss
@@ -1,8 +1,9 @@
 header {
-
+  z-index: 100;
   width: 100%;
   height: 70px;
   top: 0;
+
   .float-left{
     position: fixed;
     opacity: 0.8;
@@ -26,7 +27,6 @@ header {
       opacity: 0.8;
     }
   }
-
 
   .hamburger {
     position: relative;
@@ -134,6 +134,7 @@ body.open {
   img.bg{
     background: black;
     opacity: 0.7;
+    z-index: 10;
   }
   overflow: hidden;
   #nav-icon {
@@ -189,5 +190,10 @@ body.open {
         }
       }
     }
+  }
+
+  .content.container-fluid {
+    z-index: -500;
+    opacity: 0.2;
   }
 }
