--- a/public/stylesheets/styles.scss
+++ b/public/stylesheets/styles.scss
@@ -14,6 +14,7 @@ html, body{
   background: black;
   //background-color: rgb(0,0,0,0.8);
   background-image: url("/public/images/golden-waves-3.svg");
+  //background-color: rgb(0,0,0,0.3);
   display: inline-block;
   a {
     text-decoration: none;
@@ -167,7 +168,7 @@ body > * {
   }
 
   .image {
-    min-height: 400px;
+    min-height: 200px;
     transition: all 0.75s ease-out;
     display: inline-block;
     position: relative;
